# 6502_emulator

./: .gitignore  6502_emulator  CMakeLists.txt  README.md  cmp_test  compare_instruction.cpp  compare_instruction_test.cpp  cpu.cpp  cpu.h  data.h  debug.cpp  debug.h  intructions  machine_6502.cpp  machine_6502.h  main.cpp  memory.cpp  memory.h  stack.cpp  stack.h
